<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:text="@string/string_main_otp_verification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

        <TextView
            android:id="@+id/text_main_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/string_main_we_will_send_you_an_one_time_password_on_this_mobile_number"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_main_title" />

        <TextView
            android:id="@+id/text_main_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_main_enter_mobile_number"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_main_desc" />

        <LinearLayout
            android:id="@+id/layout_main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_main_instruction" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/string_main_91"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edit_main_mobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/string_main_hint_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:maxLength="10"
                android:textSize="16sp"
                android:textStyle="bold"
                android:inputType="number"/>

        </LinearLayout>

        <View
            android:id="@+id/view_main_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_main_linear"/>

        <Button
            android:id="@+id/btn_main_get_opt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/string_main_get_otp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_main_divider"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>